--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 #Server
 server.port=8081
 server.servlet.context-path=/m3
-
 #Database
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=notifications
-
 #Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -14,3 +12,11 @@ spring.mail.username=lmilovanovic11120rn@raf.rs
 spring.mail.password=iibtrgjvsvxfldsh
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+#RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=15672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.exchange=notification.exchange
+spring.rabbitmq.queue=notification.queue
+spring.rabbitmq.routingkey=notification.routingkey
