Izmenjene vrednosti u properties fajlu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.data.mongodb.database=notifications
 #Email
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=lmilovanovic11120rn@raf.rs
-spring.mail.password=iibtrgjvsvxfldsh
+spring.mail.username=asdf
+spring.mail.password=asdf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #RabbitMQ
