--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.rabbitmq.port=15672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.rabbitmq.exchange=notification.exchange
-spring.rabbitmq.queue=notification.queue
+spring.rabbitmq.queue=registration.queue
 spring.rabbitmq.routingkey=notification.routingkey
